# RPGame

./: CMakeLists.txt  Makefile  QasyMerumyRPGamee.pro  README.md  functions  functions.cpp  functions.h  game_logic.cpp  level.cpp  level.hpp  main  main.cpp  npc.cpp  npc.hpp  npsMoveIterations.cpp  npsObject.cpp.autosave  npsObjects.cpp  npsObjects.h  objectData.h.autosave  objectInfo.h  objectType.h.autosave  player.cpp  player.hpp  sceneObjects.cpp  sceneObjects.h
inc/: game_logic.hpp  level.hpp  params.hpp
src/: level.cpp  main.cpp  npc.cpp  player.cpp
